// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./RegistrationPage.js should display no password field when current provider is present 1`] = `
<div
  className="d-flex justify-content-center m-4"
>
  <div
    className="d-flex flex-column"
  >
    <div
      className="mw-500"
    >
      <div
        className="fade alert-success mt-n2 alert show"
        id="tpa-alert"
        role="alert"
      >
        <span>
          You've successfully signed into Google. We just need a little more information before you start learning with openedX.
        </span>
      </div>
      <p>
        Already have an edX account?
        <a
          className="ml-1"
          href="/login"
          onClick={[Function]}
          target="_self"
        >
          Sign in.
        </a>
      </p>
      <hr
        className="mb-3 border-gray-200"
      />
      <h3
        className="mb-3"
      >
        Create a new account
      </h3>
      <form
        className="form-group"
      >
        <div
          className="form-group"
        >
          <span />
          <input
            aria-describedby=""
            className="form-control"
            id="name"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            placeholder="Full Name (required)"
            required={true}
            type="text"
            value=""
          />
          <span />
        </div>
        <div
          className="form-group"
        >
          <span />
          <input
            aria-describedby=""
            className="form-control"
            id="username"
            name="username"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            placeholder="Public Username (required)"
            required={true}
            type="text"
            value=""
          />
          <span />
        </div>
        <div
          className="form-group"
        >
          <span />
          <input
            aria-describedby=""
            className="form-control"
            id="email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            placeholder="Email (required)"
            required={true}
            type="text"
            value=""
          />
          <span />
        </div>
        <div
          className="form-group custom-control small"
        >
          <input
            aria-describedby=""
            checked={true}
            className="form-check-input"
            id="honor_code"
            name="honor_code"
            onChange={[Function]}
            required={true}
            type="checkbox"
            value={true}
          />
          I agree to the Your Platform Name Here 
          <a
            href="/honor"
            onClick={[Function]}
            target="_self"
          >
            Honor Code
          </a>
          
          <strong
            className="invalid-feedback"
            id="honor_code-invalid-feedback"
          >
            You must agree to the Your Platform Name Here Honor Code
          </strong>
        </div>
        <div
          className="form-group custom-control pt-10 mb-0"
        >
          <span />
          <input
            aria-describedby=""
            checked={false}
            className="form-check-input"
            id="optional"
            name="optional"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            placeholder=""
            required={true}
            type="checkbox"
            value={false}
          />
          <p
            className="mb-0 small"
            id="additionalFields"
            onClick={[Function]}
            role="presentation"
          >
            Support education research by providing additional information. (Optional)
          </p>
        </div>
        <button
          aria-disabled={false}
          aria-live="assertive"
          className="pgn__stateful-btn pgn__stateful-btn-state-default mt-3 btn btn-brand"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="d-flex align-items-center justify-content-center"
          >
            Create Account
          </span>
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`./RegistrationPage.js should match TPA provider snapshot 1`] = `
<div
  className="d-flex justify-content-center m-4"
>
  <div
    className="d-flex flex-column"
  >
    <div
      className="mw-500"
    >
      <p>
        Already have an edX account?
        <a
          className="ml-1"
          href="/login"
          onClick={[Function]}
          target="_self"
        >
          Sign in.
        </a>
      </p>
      <hr
        className="mb-3 border-gray-200"
      />
      <h3
        className="mb-3"
      >
        Create a new account
      </h3>
      <form
        className="form-group"
      >
        <div
          className="form-group"
        >
          <span />
          <input
            aria-describedby=""
            className="form-control"
            id="name"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            placeholder="Full Name (required)"
            required={true}
            type="text"
            value=""
          />
          <span />
        </div>
        <div
          className="form-group"
        >
          <span />
          <input
            aria-describedby=""
            className="form-control"
            id="username"
            name="username"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            placeholder="Public Username (required)"
            required={true}
            type="text"
            value=""
          />
          <span />
        </div>
        <div
          className="form-group"
        >
          <span />
          <input
            aria-describedby=""
            className="form-control"
            id="email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            placeholder="Email (required)"
            required={true}
            type="text"
            value=""
          />
          <span />
        </div>
        <div
          className="form-group"
        >
          <span />
          <input
            aria-describedby=""
            className="form-control"
            id="password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            placeholder="Password (required)"
            required={true}
            type="password"
            value=""
          />
          <span />
        </div>
        <div
          className="form-group custom-control small"
        >
          <input
            aria-describedby=""
            checked={true}
            className="form-check-input"
            id="honor_code"
            name="honor_code"
            onChange={[Function]}
            required={true}
            type="checkbox"
            value={true}
          />
          I agree to the Your Platform Name Here 
          <a
            href="/honor"
            onClick={[Function]}
            target="_self"
          >
            Honor Code
          </a>
          
          <strong
            className="invalid-feedback"
            id="honor_code-invalid-feedback"
          >
            You must agree to the Your Platform Name Here Honor Code
          </strong>
        </div>
        <div
          className="form-group custom-control pt-10 mb-0"
        >
          <span />
          <input
            aria-describedby=""
            checked={false}
            className="form-check-input"
            id="optional"
            name="optional"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            placeholder=""
            required={true}
            type="checkbox"
            value={false}
          />
          <p
            className="mb-0 small"
            id="additionalFields"
            onClick={[Function]}
            role="presentation"
          >
            Support education research by providing additional information. (Optional)
          </p>
        </div>
        <button
          aria-disabled={false}
          aria-live="assertive"
          className="pgn__stateful-btn pgn__stateful-btn-state-default mt-3 btn btn-brand"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="d-flex align-items-center justify-content-center"
          >
            Create Account
          </span>
        </button>
        <div
          className="d-block mb-4 mt-4"
        >
          <hr
            className="mt-0 border-gray-200"
          />
          <span
            className="d-blockmb-4 text-left"
          >
            or create an account using
          </span>
        </div>
        <div
          className="row tpa-container"
        >
          <button
            className="btn-social btn-oa2-apple-id"
            id="oa2-apple-id"
            onClick={[Function]}
            type="button"
          >
            <div
              aria-hidden="true"
              className="mx-auto"
            >
              <img
                alt="icon Apple"
                className="icon-image"
                src="https://edx.devstack.lms/logo.png"
              />
              <span
                aria-hidden="true"
                className="pl-2"
              >
                Apple
              </span>
            </div>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`./RegistrationPage.js should match default section snapshot 1`] = `
<div
  className="d-flex justify-content-center m-4"
>
  <div
    className="d-flex flex-column"
  >
    <div
      className="mw-500"
    >
      <p>
        Already have an edX account?
        <a
          className="ml-1"
          href="/login"
          onClick={[Function]}
          target="_self"
        >
          Sign in.
        </a>
      </p>
      <hr
        className="mb-3 border-gray-200"
      />
      <h3
        className="mb-3"
      >
        Create a new account
      </h3>
      <form
        className="form-group"
      >
        <div
          className="form-group"
        >
          <span />
          <input
            aria-describedby=""
            className="form-control"
            id="name"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            placeholder="Full Name (required)"
            required={true}
            type="text"
            value=""
          />
          <span />
        </div>
        <div
          className="form-group"
        >
          <span />
          <input
            aria-describedby=""
            className="form-control"
            id="username"
            name="username"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            placeholder="Public Username (required)"
            required={true}
            type="text"
            value=""
          />
          <span />
        </div>
        <div
          className="form-group"
        >
          <span />
          <input
            aria-describedby=""
            className="form-control"
            id="email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            placeholder="Email (required)"
            required={true}
            type="text"
            value=""
          />
          <span />
        </div>
        <div
          className="form-group"
        >
          <span />
          <input
            aria-describedby=""
            className="form-control"
            id="password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            placeholder="Password (required)"
            required={true}
            type="password"
            value=""
          />
          <span />
        </div>
        <div
          className="form-group custom-control small"
        >
          <input
            aria-describedby=""
            checked={true}
            className="form-check-input"
            id="honor_code"
            name="honor_code"
            onChange={[Function]}
            required={true}
            type="checkbox"
            value={true}
          />
          I agree to the Your Platform Name Here 
          <a
            href="/honor"
            onClick={[Function]}
            target="_self"
          >
            Honor Code
          </a>
          
          <strong
            className="invalid-feedback"
            id="honor_code-invalid-feedback"
          >
            You must agree to the Your Platform Name Here Honor Code
          </strong>
        </div>
        <div
          className="form-group custom-control pt-10 mb-0"
        >
          <span />
          <input
            aria-describedby=""
            checked={false}
            className="form-check-input"
            id="optional"
            name="optional"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            placeholder=""
            required={true}
            type="checkbox"
            value={false}
          />
          <p
            className="mb-0 small"
            id="additionalFields"
            onClick={[Function]}
            role="presentation"
          >
            Support education research by providing additional information. (Optional)
          </p>
        </div>
        <button
          aria-disabled={false}
          aria-live="assertive"
          className="pgn__stateful-btn pgn__stateful-btn-state-default mt-3 btn btn-brand"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="d-flex align-items-center justify-content-center"
          >
            Create Account
          </span>
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`./RegistrationPage.js should match pending button state snapshot 1`] = `
<div
  className="d-flex justify-content-center m-4"
>
  <div
    className="d-flex flex-column"
  >
    <div
      className="mw-500"
    >
      <p>
        Already have an edX account?
        <a
          className="ml-1"
          href="/login"
          onClick={[Function]}
          target="_self"
        >
          Sign in.
        </a>
      </p>
      <hr
        className="mb-3 border-gray-200"
      />
      <h3
        className="mb-3"
      >
        Create a new account
      </h3>
      <form
        className="form-group"
      >
        <div
          className="form-group"
        >
          <span />
          <input
            aria-describedby=""
            className="form-control"
            id="name"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            placeholder="Full Name (required)"
            required={true}
            type="text"
            value=""
          />
          <span />
        </div>
        <div
          className="form-group"
        >
          <span />
          <input
            aria-describedby=""
            className="form-control"
            id="username"
            name="username"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            placeholder="Public Username (required)"
            required={true}
            type="text"
            value=""
          />
          <span />
        </div>
        <div
          className="form-group"
        >
          <span />
          <input
            aria-describedby=""
            className="form-control"
            id="email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            placeholder="Email (required)"
            required={true}
            type="text"
            value=""
          />
          <span />
        </div>
        <div
          className="form-group"
        >
          <span />
          <input
            aria-describedby=""
            className="form-control"
            id="password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            placeholder="Password (required)"
            required={true}
            type="password"
            value=""
          />
          <span />
        </div>
        <div
          className="form-group custom-control small"
        >
          <input
            aria-describedby=""
            checked={true}
            className="form-check-input"
            id="honor_code"
            name="honor_code"
            onChange={[Function]}
            required={true}
            type="checkbox"
            value={true}
          />
          I agree to the Your Platform Name Here 
          <a
            href="/honor"
            onClick={[Function]}
            target="_self"
          >
            Honor Code
          </a>
          
          <strong
            className="invalid-feedback"
            id="honor_code-invalid-feedback"
          >
            You must agree to the Your Platform Name Here Honor Code
          </strong>
        </div>
        <div
          className="form-group custom-control pt-10 mb-0"
        >
          <span />
          <input
            aria-describedby=""
            checked={false}
            className="form-check-input"
            id="optional"
            name="optional"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            placeholder=""
            required={true}
            type="checkbox"
            value={false}
          />
          <p
            className="mb-0 small"
            id="additionalFields"
            onClick={[Function]}
            role="presentation"
          >
            Support education research by providing additional information. (Optional)
          </p>
        </div>
        <button
          aria-disabled={true}
          aria-live="assertive"
          className="pgn__stateful-btn pgn__stateful-btn-state-pending mt-3 disabled btn btn-brand"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="d-flex align-items-center justify-content-center"
          >
            <span
              className="pgn__stateful-btn-icon"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-spinner fa-w-16 fa-spin "
                data-icon="spinner"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
            Create Account
          </span>
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`./RegistrationPage.js should show error message on 409 on alert and below the fields 1`] = `
<div
  className="d-flex justify-content-center m-4"
>
  <div
    className="d-flex flex-column"
  >
    <div
      className="mw-500"
    >
      <div
        className="fade alert alert-danger show"
        role="alert"
      >
        <div
          className="alert-heading h4"
        >
          We couldn't create your account.
        </div>
        <ul>
          <li
            className="text-left"
          >
            It looks like test@gmail.com belongs to an existing account. Try again with a different email address.
          </li>
          <li
            className="text-left"
          >
            It looks like test belongs to an existing account. Try again with a different username.
          </li>
        </ul>
      </div>
      <p>
        Already have an edX account?
        <a
          className="ml-1"
          href="/login"
          onClick={[Function]}
          target="_self"
        >
          Sign in.
        </a>
      </p>
      <hr
        className="mb-3 border-gray-200"
      />
      <h3
        className="mb-3"
      >
        Create a new account
      </h3>
      <form
        className="form-group"
      >
        <div
          className="form-group"
        >
          <span />
          <input
            aria-describedby=""
            className="form-control"
            id="name"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            placeholder="Full Name (required)"
            required={true}
            type="text"
            value=""
          />
          <span />
        </div>
        <div
          className="form-group"
        >
          <span />
          <input
            aria-describedby=""
            className="form-control"
            id="username"
            name="username"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            placeholder="Public Username (required)"
            required={true}
            type="text"
            value=""
          />
          <span />
        </div>
        <div
          className="form-group"
        >
          <span />
          <input
            aria-describedby=""
            className="form-control"
            id="email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            placeholder="Email (required)"
            required={true}
            type="text"
            value=""
          />
          <span />
        </div>
        <div
          className="form-group"
        >
          <span />
          <input
            aria-describedby=""
            className="form-control"
            id="password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            placeholder="Password (required)"
            required={true}
            type="password"
            value=""
          />
          <span />
        </div>
        <div
          className="form-group custom-control small"
        >
          <input
            aria-describedby=""
            checked={true}
            className="form-check-input"
            id="honor_code"
            name="honor_code"
            onChange={[Function]}
            required={true}
            type="checkbox"
            value={true}
          />
          I agree to the Your Platform Name Here 
          <a
            href="/honor"
            onClick={[Function]}
            target="_self"
          >
            Honor Code
          </a>
          
          <strong
            className="invalid-feedback"
            id="honor_code-invalid-feedback"
          >
            You must agree to the Your Platform Name Here Honor Code
          </strong>
        </div>
        <div
          className="form-group custom-control pt-10 mb-0"
        >
          <span />
          <input
            aria-describedby=""
            checked={false}
            className="form-check-input"
            id="optional"
            name="optional"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            placeholder=""
            required={true}
            type="checkbox"
            value={false}
          />
          <p
            className="mb-0 small"
            id="additionalFields"
            onClick={[Function]}
            role="presentation"
          >
            Support education research by providing additional information. (Optional)
          </p>
        </div>
        <button
          aria-disabled={false}
          aria-live="assertive"
          className="pgn__stateful-btn pgn__stateful-btn-state-default mt-3 btn btn-brand"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="d-flex align-items-center justify-content-center"
          >
            Create Account
          </span>
        </button>
      </form>
    </div>
  </div>
</div>
`;
